[tool.poetry]
name = "hpo4dl"
version = "0.1.0"
description = "Hyper parameter optimization"
authors = ["Rishan <rd.senanayake@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
timm = "^0.9.2"
configspace = "^0.7.1"
pandas = "^2.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pre-commit = "^3.3.3"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
