[tool.poetry]
name = "hpo4dl"
version = "0.1.0"
description = "Hyper parameter optimization"
authors = ["Rishan <rd.senanayake@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
timm = "^0.9.2"
configspace = "^0.7.1"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
gpytorch = "^1.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
