[tool.poetry]
name = "hpo4dl"
version = "0.1.0"
description = "Hyper parameter optimization for deep learning"
authors = [
    "Rishan Senanayake <rd.senanayake@gmail.com>"
]
maintainers = [
    "Sebastian Pineda <pineda@cs.uni-freiburg.de>",
    "Arlind Kadra <kadraa@cs.uni-freiburg.de>",
    "Rishan Senanayake",
    "Josif Grabocka",
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/releaunifreiburg/HPO4DL"
repository = "https://github.com/releaunifreiburg/HPO4DL"
keywords = ["Hyperparameter Optimization", "AutoML"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [{ include = "hpo4dl" }]

[tool.poetry.dependencies]
python = "^3.8"
timm = "^0.9.2"
configspace = "^0.7.1"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
gpytorch = "^1.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
